--- a/resources/sass/_overlay.scss
+++ b/resources/sass/_overlay.scss
@@ -23,3 +23,11 @@
         right: 1.6rem;
     }
 }
+
+@media only screen and (max-width: $breakpoint-mobile)
+{
+    .overlay
+    {
+        padding: 2rem;
+    }
+}
